objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <description>Represents a product or service line item</description>
    <fields>
        <fullName>APTS_1_Year_APP_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1 Year APP Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Answer_Service_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will check for the Approval for the answering Products</description>
        <label>APTS Answer Service Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Always_Required__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Approval_Always_Required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Always Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Segment__c</fullName>
        <description>Formula Field that projects Product Configuration&apos;s Quote/Proposal&apos;s &quot;Approval Segment&quot; picklist value as TEXT into Line Item; primarily for use in Approvals/DealMaximizer</description>
        <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_Approval_Segment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Billing_Frequency__c</fullName>
        <formula>TEXT(Apttus_Config2__AssetLineItemId__r.Apttus_Config2__BillingFrequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Contract_Term__c</fullName>
        <formula>TEXT(Apttus_Config2__AssetLineItemId__r.APTS_Contract_Term__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Contract Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Net_Price__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Basis__c</fullName>
        <label>Auto Renew Price Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Renew_Price_Percentage__c</fullName>
        <label>Auto Renew Price Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Availability_Date__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Availability_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Billing_Frequency_Default__c</fullName>
        <formula>&apos;Yearly&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridg_Contract_Term_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bridg/Contract Term Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Discount__c</fullName>
        <label>Bridge Discount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>97</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>94</fullName>
                </value>
                <value>
                    <fullName>93</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
                <value>
                    <fullName>91</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>89</fullName>
                </value>
                <value>
                    <fullName>88</fullName>
                </value>
                <value>
                    <fullName>87</fullName>
                </value>
                <value>
                    <fullName>86</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>84</fullName>
                </value>
                <value>
                    <fullName>83</fullName>
                </value>
                <value>
                    <fullName>82</fullName>
                </value>
                <value>
                    <fullName>81</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>79</fullName>
                </value>
                <value>
                    <fullName>78</fullName>
                </value>
                <value>
                    <fullName>77</fullName>
                </value>
                <value>
                    <fullName>76</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>74</fullName>
                </value>
                <value>
                    <fullName>73</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>71</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Eligibility__c</fullName>
        <label>Bridge Eligibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Length__c</fullName>
        <formula>CASE( 
TEXT( APTS_Bridge__c ), 
&quot;7 Days&quot;, 70, 
&quot;14 Days&quot;, 14, 
&quot;28 Days&quot;, 28, 
&quot;1 Month&quot;, 1, 
&quot;2 Months&quot;, 2, 
&quot;3 Months&quot;, 3, 
&quot;4 Months&quot;, 4, 
&quot;5 Months&quot;, 5, 
&quot;6 Months&quot;, 6, 
&quot;7 Months&quot;, 7, 
&quot;8 Months&quot;, 8, 
&quot;9 Months&quot;, 9, 
&quot;10 Months&quot;, 10, 
&quot;11 Months&quot;, 11, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bridge Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge_Monthly_Charge__c</fullName>
        <description>Bridge Net Price</description>
        <formula>CASE(TEXT(Apttus_Config2__PriceMethod__c),
&quot;Per Unit&quot;,
( Apttus_Config2__ListPrice__c*Apttus_Config2__Quantity__c)   - ( Apttus_Config2__ListPrice__c*Apttus_Config2__Quantity__c * APTS_New_Bridge_Discount__c/100),
( Apttus_Config2__ListPrice__c)   - ( Apttus_Config2__ListPrice__c * APTS_New_Bridge_Discount__c/100)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Price of Proposal Line item less the Bridge discount amount entered.</inlineHelpText>
        <label>APTS_Bridge Monthly Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bridge__c</fullName>
        <label>Bridge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7 Days</fullName>
                </value>
                <value>
                    <fullName>14 Days</fullName>
                </value>
                <value>
                    <fullName>28 Days</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>N/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Bundle__c</fullName>
        <formula>IF(NOT(ISBLANK(TEXT(APTS_Group__c))),
 APTS_Group_Primary_Material_Name__c  &amp; &quot; &quot; &amp;  TEXT(APTS_Group__c),&quot;&quot;
)</formula>
        <label>Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CUAS1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CUAS+1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Calculat_Min_YOY_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculated Min YOY Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Auto_Renewal__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Calculated Auto Renewal %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Min_YOY__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Calculated Min YOY%</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_1__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Calculated Year 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_2__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Calculated Year 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Calculated_Year_3__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Calculated Year 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Canada_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canada Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Cancelled_Adjustment_Amount__c</fullName>
        <description>To Hold the value retrieved from Apttus_Config2__PriceMatrixEntry__c , for Line Status Cancelled</description>
        <label>Cancelled Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L2__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Cat_L2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cat Hierarchy L2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L3__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Cat_L3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cat Hierarchy L3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cat_L5__c</fullName>
        <formula>Apttus_Config2__ProductId__r.APTS_Cat_L5__c</formula>
        <label>Cat Hierarchy L5</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Combination_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Detail</label>
        <referenceTo>APTS_Attribute_Value_Combination__c</referenceTo>
        <relationshipLabel>Combination Key</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_End_Date__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Info_RenewalDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Exit_Amount__c</fullName>
        <description>Created as part of DOC-12617, tells amount which customer pays on last year of term
and can be used for Renewing Line item for next term.</description>
        <label>Contract Exit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Line_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Contract Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Start_Date__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.Apttus_Config2__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term_Default__c</fullName>
        <formula>IF(
(
(APTS_Media_High_Level_Code__c ==&apos;13&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c == NULL)
|| (APTS_Media_High_Level_Code__c ==&apos;13&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c == &quot;SS&quot;)
|| (APTS_Media_High_Level_Code__c ==&apos;26&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c == NULL)
) &amp;&amp; TEXT( Apttus_Config2__ChargeType__c ) == &quot;Subscription Fee&quot;
,
&apos;&apos;,
IF(APTS_Media_High_Level_Code__c ==&apos;13&apos; &amp;&amp; NOT(TEXT(Apttus_Config2__ProductId__r.Family) == &apos;CASELINE&apos;) &amp;&amp;
(APTS_Media_Lower_Level_Code__c == &apos;PS&apos; ||APTS_Media_Lower_Level_Code__c == &apos;ST&apos; || APTS_Media_Lower_Level_Code__c == &apos;Q6&apos;)
,
&apos;1 Year&apos;,
IF(APTS_Proposal_Business_Unit__c == &apos;Canada&apos; &amp;&amp; NOT(TEXT(Apttus_Config2__ProductId__r.Family) == &apos;ACRITAS&apos;) &amp;&amp; NOT(TEXT(Apttus_Config2__ProductId__r.Family) == &apos;CASELINE&apos;),&apos;1 Year&apos;,
IF(APTS_Proposal_Business_Unit__c == &apos;SCS&apos; ,&apos;3 Years&apos;,
IF(APTS_Proposal_Business_Unit__c == &apos;FindLaw&apos;,&apos;1 Year&apos;,
IF(
(Apttus_Config2__ProductId__r.APTS_Cat_L5__c== &apos;L5_T736510_FP&apos; ||
Apttus_Config2__ProductId__r.APTS_Cat_L5__c== &apos;L5_T770021_FP&apos; ||
Apttus_Config2__ProductId__r.APTS_Cat_L5__c== &apos;L5_T736500_FP&apos; || Apttus_Config2__ProductId__r.APTS_Cat_L4__c== &apos;L4_T77135_FP&apos; )
,&apos;1 Year&apos;,&apos;3 Years&apos;)))
)))</formula>
        <label>Contract Term Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term_Number__c</fullName>
        <formula>CASE( 
TEXT( APTS_Contract_Term__c ), 
&quot;1 Month&quot;, 1, 
&quot;2 Months&quot;, 2, 
&quot;3 Months&quot;, 3, 
&quot;4 Months&quot;, 4, 
&quot;5 Months&quot;, 5, 
&quot;6 Months&quot;, 6, 
&quot;7 Months&quot;, 7, 
&quot;8 Months&quot;, 8, 
&quot;9 Months&quot;, 9, 
&quot;10 Months&quot;, 10, 
&quot;11 Months&quot;, 11, 
&quot;1 Year&quot;,12, 
&quot;2 Years&quot;,24, 
&quot;3 Years&quot;,36,
&quot;4 Years&quot;,48, 
&quot;5 Years&quot;,60, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Term Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term_Whole_Years__c</fullName>
        <description>Represents the total length (term) of the contract in whole years (floor), if a Contract Term containing &quot;Year&quot; or &quot;Month&quot; has been selected; empty/null otherwise.  Derived from &quot;Contract Term Number&quot; (months).  Used primarily as an Approval and Deal Maximizer dimension.</description>
        <formula>IF(
 CONTAINS(UPPER(TEXT(APTS_Contract_Term__c)), &apos;YEAR&apos;) ||
 CONTAINS(UPPER(TEXT(APTS_Contract_Term__c)), &apos;MONTH&apos;),

 FLOOR(APTS_Contract_Term_Number__c / 12),
 null
)</formula>
        <inlineHelpText>Represents the total length (term) of the contract in whole years (floor), if a Contract Term containing &quot;Year&quot; or &quot;Month&quot; has been selected; empty/null otherwise.  Derived from &quot;Contract Term Number&quot; (months).  Used primarily as an Approval and Deal Maxi</inlineHelpText>
        <label>Contract Term - Whole Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Term__c</fullName>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>Short Term Trial</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>10 Years</fullName>
                    <isActive>false</isActive>
                    <label>10 Years</label>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                    <isActive>false</isActive>
                    <label>Short Term</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Corporate_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Corporate_Select_Option__c</fullName>
        <formula>TEXT( Apttus_Config2__OptionId__r.APTS_Corporate_Select__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Select Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Corporate_Select__c</fullName>
        <formula>Text(Apttus_Config2__ProductId__r.APTS_Corporate_Select__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Select</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Count_APP__c</fullName>
        <label>Count APP</label>
        <summaryFilterItems>
            <field>Apttus_Config2__ProductAttributeValue__c.SCS_Print_Purchase_Options__c</field>
            <operation>contains</operation>
            <value>APP</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__ProductAttributeValue__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Category__c</fullName>
        <description>Formula Field that projects Product Configuration&apos;s Quote/Proposal&apos;s Account &quot;Customer Category&quot; picklist value as TEXT into Line Item; primarily for use in Approvals/DealMaximizer</description>
        <formula>TEXT(Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_SSD_Sold_To__r.APTS_Customer_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Group__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.APTS_Customer_Group__c</formula>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Not_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Not Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Number__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Deal Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Type__c</fullName>
        <description>This is added to support lapse lines.</description>
        <label>Deal Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Decentralized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_Decentralized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_DefaultNetPrice__c</fullName>
        <formula>Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percent_Retail__c</fullName>
        <formula>IF( Apttus_Config2__BasePrice__c !=0, (( Apttus_Config2__BasePrice__c -  Apttus_Config2__NetPrice__c ) / Apttus_Config2__BasePrice__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount % From Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Exclude_Incremental_Growth_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to validate if an Incentive code is applied to exclude Incremental Growth related Approval</description>
        <label>Exclude Incremental Growth Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Agreement_Total__c</fullName>
        <label>Existing Agreement Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Existing_Subscriptions_Total__c</fullName>
        <label>Existing Subscriptions Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ExposurePack_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExposurePack_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Exposure_Pack_Disc__c</fullName>
        <formula>APTS_Combination_Key__r.APTS_Exposure_Pack_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exposure Pack Disc%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FLDirectoryProducts__c</fullName>
        <formula>IF(OR( APTS_Product_Code__c ==&apos;37005072&apos;,APTS_Product_Code__c==&apos;40987607&apos;,APTS_Product_Code__c==&apos;40987608&apos;,APTS_Product_Code__c==&apos;41680342&apos;,APTS_Product_Code__c==&apos;37005004&apos;,APTS_Product_Code__c==&apos;37005005&apos;,APTS_Product_Code__c==&apos;41976905&apos;,APTS_Product_Code__c==&apos;42088301&apos;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FLDirectoryProducts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_FLDirectory_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It checks for approval for Directory Products. SOC-9887</description>
        <label>FLDirectory_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_FL_AnnualApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SOC-4589</description>
        <label>APTS FL AnnualApprovalRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Annual_Spend__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_SSD_Sold_To__r.LCRM_FL_Annual_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FL Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Annual_spend_Calc__c</fullName>
        <label>FL Annual Spend Calc</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Current_Contract_End_Date__c</fullName>
        <description>SOC-9837</description>
        <label>Current Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Current_price__c</fullName>
        <description>Customer&apos;s current asset Price</description>
        <formula>Apttus_Config2__AssetLineItemId__r.Apttus_Config2__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer&apos;s current asset Price</inlineHelpText>
        <label>Current price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Qty__c</fullName>
        <label>FL Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Renewal_Contract_End_Date__c</fullName>
        <description>SOC-9837</description>
        <label>Renewal Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Renewal_List_Price__c</fullName>
        <formula>Apttus_Config2__PriceListItemId__r.APTS_FL_Renewal_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FL Renewal List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_FL_Renewal_Only_Clone__c</fullName>
        <description>Formula is modified as per Corporate requirement for template for old and new versioned product (DOC-8034): When contract term is None or 1 year, value of this field is Apttus_Config2__ProductId__r.APTS_FL_Renewal_Only_Clone__c.For all other contract term values it is blank.</description>
        <formula>IF(OR(APTS_Proposal_Business_Unit__c==&apos;Corp OneOTC US&apos;,APTS_Proposal_Business_Unit__c==&apos;Corp OneOTC UK&apos;),IF(OR(APTS_Contract_Term_Number__c==0,APTS_Contract_Term_Number__c==12),TEXT( Apttus_Config2__ProductId__r.APTS_FL_Renewal_Only_Clone__c ),&apos;&apos;),(TEXT( Apttus_Config2__ProductId__r.APTS_FL_Renewal_Only_Clone__c )))</formula>
        <label>Renewal Only/Old Versions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FL_UpgradeDowngradeApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_FL_UpgradeDowngradeApprovalRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_FS_IM_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS/IM Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Finished_Item_Number__c</fullName>
        <formula>IF(TEXT(Apttus_Config2__LineType__c)==&apos;Option&apos;,Apttus_Config2__OptionId__r.Finished_Item_Number__c,Apttus_Config2__ProductId__r.Finished_Item_Number__c)</formula>
        <label>Finished Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Format__c</fullName>
        <formula>Apttus_Config2__ProductId__r.Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Frozen_Market_Segment__c</fullName>
        <description>Frozen Market Segment for Promotions</description>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_Config2__AccountId__r.FrozenMarketSegment__c</formula>
        <inlineHelpText>Frozen Market Segment for Promotions</inlineHelpText>
        <label>APTS_Frozen_Market_Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Government_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Primary_Material_Name__c</fullName>
        <label>Group Primary Material Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Primary_Material__c</fullName>
        <label>Group Primary Material</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group_Type__c</fullName>
        <label>Group Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle A</fullName>
                </value>
                <value>
                    <fullName>Bundle B</fullName>
                </value>
                <value>
                    <fullName>Bundle C</fullName>
                </value>
                <value>
                    <fullName>Bundle D</fullName>
                </value>
                <value>
                    <fullName>Bundle E</fullName>
                </value>
                <value>
                    <fullName>Bundle F</fullName>
                </value>
                <value>
                    <fullName>Bundle G</fullName>
                </value>
                <value>
                    <fullName>Bundle H</fullName>
                </value>
                <value>
                    <fullName>Bundle I</fullName>
                </value>
                <value>
                    <fullName>Bundle J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Guidance_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guidance Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Has_Online_Assets__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.APTS_SSD_Sold_To__r.APTS_Has_Online_Assets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Online Assets</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>